Added head shot and contact information

--- a/index.html
+++ b/index.html
@@ -15,17 +15,27 @@
 <body>
 <div class="wrapper">
     <header>
+        <img src="files/headshot.jpg" style="width:170px"></img>
         <h1>Marius Retegan</h1>
-        <p></p>
-        <!-- <p class="view"><a href="https://github.com/mretegan">View My GitHub Profile</a></p> -->
+        <p style="line-height:90%;">
+        <a href="http://www.cec.mpg.de" target="_blank">MPI for Chemical Energy Conversion</a>
+        </p>
+        <p style="line-height:80%;">
+        Stiftstr. 34-36 
+        <br></br>
+        45470 Mülheim an der Ruhr, Germany
+        <br></br>
+        marius.retegan&#64cec.mpg.de
+        <br></br>
+        +49 (0) 208 306 3588
+        </p>
     </header>
 
     <section>
         <h1><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Interests</h1>
         <hr></hr>
-
         
-        <h2>Water oxidation</h2>
+        <h2>Water Oxidation</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor neque quis sagittis porta. Integer condimentum, nunc in porta porta, turpis dui egestas ex, eget auctor orci ex non dui. Morbi tempor nulla vitae nulla dignissim pretium. Donec ante mi, tempus non ligula ut, placerat consequat risus. Vivamus ac dolor urna. Aliquam sit amet suscipit neque, placerat hendrerit sem. Suspendisse eu placerat justo, eu porta tortor. Maecenas vitae sem at orci faucibus dictum. In interdum finibus tellus, sit amet varius nisl efficitur non.
         <br></br>
         Vivamus ultrices mi a sapien viverra feugiat sit amet sed nisi. Sed malesuada pellentesque lacus eu condimentum. Vestibulum malesuada nunc rutrum pretium tristique. Vestibulum molestie vestibulum libero at elementum. Suspendisse potenti. Nunc non elit sed ligula rhoncus vehicula quis at augue. Vestibulum rhoncus elit sed nisi venenatis congue. Phasellus tempus et turpis a accumsan.
@@ -63,11 +73,13 @@
 
         <!-- <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p> -->
 
+    <p><small>© Marius Retegan 2015</small></p>
     </section>
 
     <!-- <footer> -->
     <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
     <!-- </footer> -->
+
 </div>
 
 <script src="javascripts/scale.fix.js"></script>
