--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <header>
         <img src="files/headshot.jpg" style="width:170px"></img>
         <h1>Marius Retegan</h1>
-        <p style="line-height:90%;">
-        <a href="http://www.cec.mpg.de" target="_blank">MPI for Chemical Energy Conversion</a>
-        </p>
         <p style="line-height:80%;">
+        <a href="http://www.cec.mpg.de" target="_blank">MPI for Chemical Energy Conversion</a>
+        <!-- </p> -->
+        <!-- <p style="line-height:80%;"> -->
+        <br></br>
         Stiftstr. 34-36 
         <br></br>
         45470 Mülheim an der Ruhr, Germany
         <br></br>
-        marius.retegan&#64cec.mpg.de
+        marius.retegan (at) cec.mpg.de
         <br></br>
         +49 (0) 208 306 3588
         </p>
