--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
 <div class="wrapper">
     <header>
-        <img src="files/headshot.jpg" style="width:170px"></img>
+        <img src="files/headshot.png" style="width:170px; margin-left:15px; margin-right:60px; margin-bottom:15px; float:left"></img>
+        <br></br>
         <h1>Marius Retegan</h1>
         <p style="line-height:80%;">
         <a href="http://www.cec.mpg.de" target="_blank">MPI for Chemical Energy Conversion</a>
@@ -35,52 +36,17 @@
     <section>
         <h1><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Interests</h1>
         <hr></hr>
-        
+
         <h2>Water Oxidation</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor neque quis sagittis porta. Integer condimentum, nunc in porta porta, turpis dui egestas ex, eget auctor orci ex non dui. Morbi tempor nulla vitae nulla dignissim pretium. Donec ante mi, tempus non ligula ut, placerat consequat risus. Vivamus ac dolor urna. Aliquam sit amet suscipit neque, placerat hendrerit sem. Suspendisse eu placerat justo, eu porta tortor. Maecenas vitae sem at orci faucibus dictum. In interdum finibus tellus, sit amet varius nisl efficitur non.
         <br></br>
         Vivamus ultrices mi a sapien viverra feugiat sit amet sed nisi. Sed malesuada pellentesque lacus eu condimentum. Vestibulum malesuada nunc rutrum pretium tristique. Vestibulum molestie vestibulum libero at elementum. Suspendisse potenti. Nunc non elit sed ligula rhoncus vehicula quis at augue. Vestibulum rhoncus elit sed nisi venenatis congue. Phasellus tempus et turpis a accumsan.
         <br></br>
         Mauris euismod magna sit amet sem fringilla, cursus egestas tortor placerat. Sed in mattis odio. Nullam venenatis ex a lectus ullamcorper aliquet. Cras eleifend sagittis dolor nec gravida. Donec id enim accumsan, mattis leo quis, hendrerit sem. Nullam vitae erat sed velit tincidunt feugiat at vitae metus. Maecenas pellentesque sapien in condimentum tempor. In consequat sem ipsum, in finibus urna mattis a. Ut posuere aliquam ante. Aliquam sagittis ut nisl consequat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam erat volutpat.
-        <br></br>
-        Curabitur eu ex varius, feugiat ligula id, vulputate diam. Suspendisse efficitur neque nec leo vehicula, a tincidunt neque blandit. Vestibulum ullamcorper ante nisi, congue venenatis eros tincidunt at. Nulla luctus congue lorem quis mattis. Quisque a odio diam. Nulla a ex accumsan, placerat orci eu, tristique justo. In commodo neque tristique, bibendum ante vel, egestas sapien.
         </p>
-        <!-- <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p> -->
 
-        <!-- <pre><code>$ cd your_repo_root/repo_name -->
-        <!-- $ git fetch origin -->
-        <!-- $ git checkout gh-pages -->
-        <!-- </code></pre> -->
-
-        <!-- <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p> -->
-
-        <!-- <h3> -->
-        <!-- <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3> -->
-
-        <!-- <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p> -->
-
-        <!-- <h3> -->
-        <!-- <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3> -->
-
-        <!-- <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p> -->
-
-        <!-- <h3> -->
-        <!-- <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3> -->
-
-        <!-- <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p> -->
-
-        <!-- <h3> -->
-        <!-- <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3> -->
-
-        <!-- <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p> -->
-
-    <p><small>© Marius Retegan 2015</small></p>
+        <p><small>© Marius Retegan 2015</small></p>
     </section>
-
-    <!-- <footer> -->
-    <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
-    <!-- </footer> -->
-
 </div>
 
 <script src="javascripts/scale.fix.js"></script>
@@ -101,8 +67,8 @@ ga('send', 'pageview');
 <!-- </script> -->
 <!-- <script type="text/javascript"> -->
 <!-- try { -->
-    <!-- var pageTracker = _gat._getTracker("UA-59996610-1"); -->
-    <!-- pageTracker._trackPageview(); -->
+<!-- var pageTracker = _gat._getTracker("UA-59996610-1"); -->
+<!-- pageTracker._trackPageview(); -->
 <!-- } catch(err) {} -->
 <!-- </script> -->
 
