Added publications section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <img src="files/headshot.png" style="width:170px; margin-left:15px; margin-right:60px; margin-bottom:15px; float:left"></img>
+        <img src="files/headshot.png" style="width:170px; margin-left:15px; margin-top:15px"></img>
         <br></br>
         <h1>Marius Retegan</h1>
         <p style="line-height:80%;">
@@ -34,10 +34,10 @@
     </header>
 
     <section>
-        <h1><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Interests</h1>
-        <hr></hr>
 
-        <h2>Water Oxidation</h2>
+        <h1><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"></a>Research Interests</h1>
+        <hr></hr>
+        <h2>Biological Water Oxidation</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor neque quis sagittis porta. Integer condimentum, nunc in porta porta, turpis dui egestas ex, eget auctor orci ex non dui. Morbi tempor nulla vitae nulla dignissim pretium. Donec ante mi, tempus non ligula ut, placerat consequat risus. Vivamus ac dolor urna. Aliquam sit amet suscipit neque, placerat hendrerit sem. Suspendisse eu placerat justo, eu porta tortor. Maecenas vitae sem at orci faucibus dictum. In interdum finibus tellus, sit amet varius nisl efficitur non.
         <br></br>
         Vivamus ultrices mi a sapien viverra feugiat sit amet sed nisi. Sed malesuada pellentesque lacus eu condimentum. Vestibulum malesuada nunc rutrum pretium tristique. Vestibulum molestie vestibulum libero at elementum. Suspendisse potenti. Nunc non elit sed ligula rhoncus vehicula quis at augue. Vestibulum rhoncus elit sed nisi venenatis congue. Phasellus tempus et turpis a accumsan.
@@ -45,7 +45,16 @@
         Mauris euismod magna sit amet sem fringilla, cursus egestas tortor placerat. Sed in mattis odio. Nullam venenatis ex a lectus ullamcorper aliquet. Cras eleifend sagittis dolor nec gravida. Donec id enim accumsan, mattis leo quis, hendrerit sem. Nullam vitae erat sed velit tincidunt feugiat at vitae metus. Maecenas pellentesque sapien in condimentum tempor. In consequat sem ipsum, in finibus urna mattis a. Ut posuere aliquam ante. Aliquam sagittis ut nisl consequat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam erat volutpat.
         </p>
 
-        <p><small>© Marius Retegan 2015</small></p>
+        <h1><a id="publications" class="anchor" href="#publications" aria-hidden="true"></a>Publications</h1>
+        <hr></hr>
+        <p>
+        <ol>
+            <li><a href="http://dx.doi.org/10.1039/C4SC03720K" target="_blank">Metal oxidation states in biological water splitting</a><br>
+            V. Krewald, M Retegan, N. Cox, J. Messinger, W. Lubitz, S. DeBeer, F. Neese, D. A. Pantazis<br>
+            <em>Chem. Sci.</em> <strong>2015</strong>, <em>6</em>, 1676&ndash;1695.</li>
+        </ol>
+        </p>
+        <p><small>&copy; Marius Retegan 2015</small></p>
     </section>
 </div>
 
