Added a new figure and removed an old one

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <br></br>
         Vivamus ultrices mi a sapien viverra feugiat sit amet sed nisi. Sed malesuada pellentesque lacus eu condimentum. Vestibulum malesuada nunc rutrum pretium tristique. Vestibulum molestie vestibulum libero at elementum. Suspendisse potenti. Nunc non elit sed ligula rhoncus vehicula quis at augue. Vestibulum rhoncus elit sed nisi venenatis congue. Phasellus tempus et turpis a accumsan.
         <br></br>
+        <img class="center" src="files/psii_hfc_qmmm.png"></img>
+        <br></br>
         Mauris euismod magna sit amet sem fringilla, cursus egestas tortor placerat. Sed in mattis odio. Nullam venenatis ex a lectus ullamcorper aliquet. Cras eleifend sagittis dolor nec gravida. Donec id enim accumsan, mattis leo quis, hendrerit sem. Nullam vitae erat sed velit tincidunt feugiat at vitae metus. Maecenas pellentesque sapien in condimentum tempor. In consequat sem ipsum, in finibus urna mattis a. Ut posuere aliquam ante. Aliquam sagittis ut nisl consequat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam erat volutpat.
         </p>
 
