Alternative text for images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <img src="files/headshot.png" style="width:170px; margin: 5% 0 0 5%">
+        <img alt="Me" src="files/headshot.png" style="width:170px; margin: 5% 0 0 5%">
         <br>
         <h1>Marius Retegan</h1>
         <p>
@@ -37,14 +37,14 @@
         Proteins are central to a large number of chemical reactions in living organisms. They display an astonishing range of functions, a diversity made possible partially by the presence of cofactors such as metal atoms and clusters that contain metal and non-metal atoms. My research interest is geared towards understanding the electronic structure, the magnetic and spectroscopic properties and the chemical reactivity of these complex biomolecular systems using the methods of computational chemistry. Especially suited are the multiscale methods in particular hybrid quantum mechanics and molecular mechanics (QM/MM) methods that combine molecular modeling using inexpensive classical potentials with elaborate first-principle treatments of the electronic structure.
         </p>
         <figure>
-            <img class="center" src="files/methods.png">
+            <img alt="Methods" class="center" src="files/methods.png">
             <figcaption>Range of computational methods that I employ in my current research</figcaption>
         </figure>
         <p>
         Biological systems containing open-shell transition metal centers presents significant challenges for theory. In addition to the presence of unpaired electrons, the difficulty lies in the necessity of including the protein environment that embeds and finely tunes the chemical and spectroscopic properties of the metallic centers. Illustrative in this respect are a number of studies that demonstrate the effect of the second sphere amino acids in the hydrolysis of phosphomonoesters catalyzed by the purple acid phosphates,<sup>16</sup> the spectroscopic properties of an iron-containing azurin,<sup>9</sup> or the influence of specific hydrogen bonding interactions on the spectroscopic signature of the natural water splitting catalyst.<sup>7</sup>
         </p>
         <figure>
-            <img class="center" src="files/psii_hfc_qmmm.png">
+            <img alt="QM/MM model of the photosystem II" class="center" src="files/psii_hfc_qmmm.png">
             <figcaption>Hydrogen bonding interaction orient the His332 residue, which in turn determines the hyperfine coupling constant of the Mn1 ion from the oxygen evolving complex, the active site of photosystem II.</figcaption>
         </figure>
         <br>
@@ -55,7 +55,7 @@
         </p>
 
         <figure>
-            <img class="center" src="files/local_casci_pivoh.png">
+            <img alt="L-CASCI" class="center" src="files/local_casci_pivoh.png">
             <figcaption>On-site zero-field splitting of the Mn(III) ion from a mixed valence complex calculated using the L-CASCI approach.</figcaption>
         </figure>
 
