--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </p>
         <figure>
             <img alt="Methods" class="center" src="files/methods.png">
-            <figcaption>Range of computational methods that I employ in my current research</figcaption>
+            <figcaption>Range of computational methods that I employ in my current research.</figcaption>
         </figure>
         <p>
-        Biological systems containing open-shell transition metal centers presents significant challenges for theory. In addition to the presence of unpaired electrons, the difficulty lies in the necessity of including the protein environment that embeds and finely tunes the chemical and spectroscopic properties of the metallic centers. Illustrative in this respect are a number of studies that demonstrate the effect of the second sphere amino acids in the hydrolysis of phosphomonoesters catalyzed by the purple acid phosphates,<sup>16</sup> the spectroscopic properties of an iron-containing azurin,<sup>9</sup> or the influence of specific hydrogen bonding interactions on the spectroscopic signature of the natural water splitting catalyst.<sup>7</sup>
+        Biological systems containing open-shell transition metal centers presents significant challenges for theory. In addition to the presence of unpaired electrons, the difficulty lies in the necessity of including the protein environment that embeds and finely tunes the chemical and spectroscopic properties of the metallic centers. Illustrative in this respect are a number of studies that demonstrate the effect of the second sphere amino acids in the hydrolysis of phosphomonoesters catalyzed by the purple acid phosphates,<sup>16</sup> the magnetic properties of an iron-containing azurin,<sup>9</sup> or the spectroscopic signature of the natural water splitting catalyst.<sup>7</sup>
         </p>
         <figure>
             <img alt="QM/MM model of the photosystem II" class="center" src="files/psii_hfc_qmmm.png">
@@ -51,12 +51,12 @@
 
         <h2>Theoretical Spectroscopy and Method Development</h2>
         <p>
-        Another topic of interest in my research is the development of theoretical methods for the prediction of spectroscopic parameters in open-shell system. In a recent contribution,<sup>2</sup> a novel approach has been introduced for the accurate calculation of the on-site zero field splitting in polynuclear metal clusters of arbitrary nuclearity. The method, termed local complete active space configuration interaction (L-CASCI), represents a multireference <em>ab initio</em> calculation within an active space composed of local orbitals of the center of interest. The approach is particularly efficient and can be easily applied to clusters of any size and topology at no additional computational costs. On the development side, I focus on bringing these methods to the <a href="https://orcaforum.cec.mpg.de/portal.php" target="_blank">ORCA</a> software. 
+        Another topic of interest in my research is the development of theoretical methods for the prediction of spectroscopic parameters in open-shell systems. In a recent contribution,<sup>2</sup> a novel approach for the accurate calculation of the on-site zero field splitting in polynuclear metal clusters has been introduced. The method, termed local complete active space configuration interaction (L-CASCI), represents a multireference <em>ab initio</em> calculation within an active space composed of local orbitals of the center of interest. The approach is particularly efficient and can be easily applied to clusters of large nuclearity and arbitrary topology at no additional computational costs compared to mononuclear complexes. On the development side, I focus on bringing these methods to the <a href="https://orcaforum.cec.mpg.de/portal.php" target="_blank">ORCA</a> software. 
         </p>
 
         <figure>
             <img alt="L-CASCI" class="center" src="files/local_casci_pivoh.png">
-            <figcaption>On-site zero-field splitting of the Mn(III) ion from a mixed valence complex calculated using the L-CASCI approach.</figcaption>
+            <figcaption>On-site zero-field splitting of the Mn(III) site from a mixed valence complex calculated using the L-CASCI approach.</figcaption>
         </figure>
 
         <br>
