Cover now refers to an article

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <li><a href="http://dx.doi.org/10.1002/chem.201200842" target="_blank">Redox-Responsive Porphyrin-Based Molecular Tweezers</a><br>
             A. Iordache, M. Retegan, F. Thomas, G. Royal, E. Saint-Aman, C. Bucher<br>
-            <em>Eur. J. Chem.</em> <strong>2012</strong>, <em>18</em>, 7648&ndash;7653. (<a href="http://onlinelibrary.wiley.com/doi/10.1002/chem.201290101/abstract" target="_blank" style="color:#cc6633; font-style:italic">cover</em></a>)</li><br>
+            <em>Eur. J. Chem.</em> <strong>2012</strong>, <em>18</em>, 7648&ndash;7653. (<a href="http://onlinelibrary.wiley.com/doi/10.1002/chem.201290101/abstract" target="_blank" style="color:#cc6633; font-style:italic">cover article</em></a>)</li><br>
 
             <li><a href="http://dx.doi.org/10.1021/ic200899w" target="_blank">Experimental and Computational Investigation of Thiolate Alkylation in Ni(II) and Zn(II) Complexes: Role of the Metal on the Sulfur Nucleophilicity</a><br>
             M. Gennari, M. Retegan, S. DeBeer, J. Pecaut, F. Neese, M.-N. Collomb, C. Duboc<br>
