Added new publication

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         <hr></hr>
         <p>
         <ol>
+            <li><a href="http://pubs.acs.org/doi/pdf/10.1021/jacs.5b04917" target="_blank">Dioxygen Activation and Catalytic Reduction to Hydrogen Peroxide by a Thiolate-Bridged Dimanganese(II) Complex with a Pendant Thiol</a><br>
+            M. Gennari, D. Brazzolotto, J. Pecaut, M. V. Cherrier, C. J. Pollock, S. DeBeer, {M. Retegan}, D. A. Pantazis, F. Neese, M. Rouzieres, R. Clérac, C. Duboc<br>
+            <em>J. Am. Chem. Soc</em> <strong>2015</strong>, <em>accepted</em></li><br>
+            
             <li><a href="http://dx.doi.org/10.1039/C4SC03720K" target="_blank">Metal oxidation states in biological water splitting</a><br>
             V. Krewald, M. Retegan, N. Cox, J. Messinger, W. Lubitz, S. DeBeer, F. Neese, D. A. Pantazis<br>
             <em>Chem. Sci.</em> <strong>2015</strong>, <em>6</em>, 1676&ndash;1695.</li><br>
