Removed reference to original template

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <em>J. Chem. Inf. Model.</em> <strong>2009</strong>, <em>49</em>, 963&ndash;971.</li><br>
         </ol>
         </p>
-        <p><small>&copy; Marius Retegan 2015 &mdash; Hosted on GitHub Pages &mdash; Layout adapted from <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>&copy; Marius Retegan 2015 &mdash; hosted on GitHub</small></p>
     </section>
 </div>
 
