--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
         <h1><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"></a>Research Interests</h1>
         <hr></hr>
 
+
+        <h2>Theoretical Spectroscopy and Method Development</h2>
+        <p>
+        A topic of interest in my research is the development of theoretical methods for the prediction of spectroscopic parameters in open-shell systems. In a recent contribution,<sup>2</sup> a novel approach for the accurate calculation of the on-site zero field splitting in polynuclear metal clusters has been introduced. The method, termed local complete active space configuration interaction (L-CASCI), involves a multireference <em>ab initio</em> calculation within an active space composed of local orbitals of the center of interest. The approach is particularly efficient and can be easily applied to clusters of large nuclearity and arbitrary topology at no additional computational costs compared to mononuclear complexes. On the development side, I focus on bringing these methods to the <a href="https://orcaforum.cec.mpg.de/portal.php" target="_blank">ORCA</a> software. 
+        </p>
+
+        <figure>
+            <img alt="L-CASCI" class="center" src="files/local_casci_pivoh.png">
+            <figcaption>On-site zero-field splitting of the Mn(III) site from a mixed valence complex calculated using the L-CASCI approach.</figcaption>
+        </figure>
+
+        <br>
+
         <h2>Biomolecular Simulations</h2>
         <p>
         Proteins are central to a large number of chemical reactions in living organisms. They display an astonishing range of functions, a diversity made possible partially by the presence of cofactors such as metal atoms and clusters that contain metal and non-metal atoms. My research interest is geared towards understanding the electronic structure, the magnetic and spectroscopic properties and the chemical reactivity of these complex biomolecular systems using the methods of computational chemistry. Multiscale methods, in particular hybrid quantum mechanics and molecular mechanics (QM/MM) computational techniques are especially suitable for this purpose. They combine molecular modeling using inexpensive classical potentials with elaborate first-principle treatments of the electronic structure.
@@ -48,19 +61,6 @@
             <figcaption>Hydrogen bonding interaction orient the His332 residue, which in turn determines the hyperfine coupling constant of the Mn1 ion from the oxygen evolving complex, the active site of photosystem II.</figcaption>
         </figure>
         <br>
-
-        <h2>Theoretical Spectroscopy and Method Development</h2>
-        <p>
-        Another topic of interest in my research is the development of theoretical methods for the prediction of spectroscopic parameters in open-shell systems. In a recent contribution,<sup>2</sup> a novel approach for the accurate calculation of the on-site zero field splitting in polynuclear metal clusters has been introduced. The method, termed local complete active space configuration interaction (L-CASCI), involves a multireference <em>ab initio</em> calculation within an active space composed of local orbitals of the center of interest. The approach is particularly efficient and can be easily applied to clusters of large nuclearity and arbitrary topology at no additional computational costs compared to mononuclear complexes. On the development side, I focus on bringing these methods to the <a href="https://orcaforum.cec.mpg.de/portal.php" target="_blank">ORCA</a> software. 
-        </p>
-
-        <figure>
-            <img alt="L-CASCI" class="center" src="files/local_casci_pivoh.png">
-            <figcaption>On-site zero-field splitting of the Mn(III) site from a mixed valence complex calculated using the L-CASCI approach.</figcaption>
-        </figure>
-
-        <br>
-
         <h1><a id="publications" class="anchor" href="#publications" aria-hidden="true"></a>Publications</h1>
         <hr></hr>
         <p>
