Corrected a small typo and updated publication list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <h2>Theoretical Spectroscopy and Method Development</h2>
         <p>
-        A topic of interest in my research is the development of theoretical methods for the prediction of spectroscopic parameters in open-shell systems. In a recent contribution,<sup>3</sup> a novel approach for the accurate calculation of the on-site zero field splitting in polynuclear metal clusters has been introduced. The method, termed local complete active space configuration interaction (L-CASCI), involves a multireference <em>ab initio</em> calculation within an active space composed of local orbitals of the center of interest. The approach is particularly efficient and can be easily applied to clusters of large nuclearity and arbitrary topology at no additional computational costs compared to mononuclear complexes. On the development side, I focus on bringing these methods to the <a href="https://orcaforum.cec.mpg.de/portal.php" target="_blank">ORCA</a> software. 
+        A topic of interest in my research is the development of theoretical methods for the prediction of spectroscopic parameters in open-shell systems. In a recent contribution,<sup>16</sup> a novel approach for the accurate calculation of the on-site zero field splitting in polynuclear metal clusters has been introduced. The method, termed local complete active space configuration interaction (L-CASCI), involves a multireference <em>ab initio</em> calculation within an active space composed of local orbitals of the center of interest. The approach is particularly efficient and can be easily applied to clusters of large nuclearity and arbitrary topology at no additional computational costs compared to mononuclear complexes. On the development side, I focus on bringing these methods to the <a href="https://orcaforum.cec.mpg.de/portal.php" target="_blank">ORCA</a> software. 
         </p>
 
         <figure>
@@ -54,7 +54,7 @@
             <figcaption>Range of computational methods that I employ in my current research.</figcaption>
         </figure>
         <p>
-        Biological systems containing open-shell transition metal centers represent significant challenges for theory. In addition to the presence of unpaired electrons, further complications ensue from the necessity of including the protein environment that embeds and finely tunes the chemical and spectroscopic properties of the metallic centers. In this respect, it is illustrative to consider a number of my studies concerning the effect of the second sphere amino acids in the hydrolysis of phosphomonoesters catalyzed by the purple acid phosphates,<sup>17</sup> the magnetic properties of an iron-containing azurin,<sup>10</sup> or the spectroscopic signature of the natural water splitting catalyst.<sup>8</sup>
+        Biological systems containing open-shell transition metal centers represent significant challenges for theory. In addition to the presence of unpaired electrons, further complications ensue from the necessity of including the protein environment that embeds and finely tunes the chemical and spectroscopic properties of the metallic centers. In this respect, it is illustrative to consider a number of my studies concerning the effect of the second sphere amino acids in the hydrolysis of phosphomonoesters catalyzed by the purple acid phosphatases,<sup>2</sup> the magnetic properties of an iron-containing azurin,<sup>9</sup> or the spectroscopic signature of the natural water splitting catalyst.<sup>11</sup>
         </p>
         <figure>
             <img alt="QM/MM model of the photosystem II" class="center" src="files/psii_hfc_qmmm.png">
@@ -64,10 +64,18 @@
         <h1><a id="publications" class="anchor" href="#publications" aria-hidden="true"></a>Publications</h1>
         <hr></hr>
         <p>
-        <ol>
+        <ol reversed>
+            <li><a href="http://arxiv.org/abs/1309.2131v2" target="_blank">Towards atomistic resolution structure of phosphatidylcholine glycerol backbone and choline headgroup at different ambient conditions</a><br>
+            A. Botan, A. Catte, F. Favela, P. Fuchs, M. Javanainen, W. Kulig, A. Lamberg, M. S. Miettinen, L. Monticelli, J. Määttä, V. S. Oganesyan, O.  H. S. Ollila, M. Retegan, H. Santuz, J. Tynkkynen<br>
+            <em>J. Phys. Chem.</em> <strong>2015</strong>, <em>accepted</em>.</li><br>
+
+            <li><a href="http://dx.doi.org/10.1007/128_2015_645" target="_blank">Principles of natural photosynthesis</a><br>
+            V. Krewald, M. Retegan, D. A. Pantazis<br>
+            <em>Top. Curr. Chem.</em> <strong>2015</strong>, <em>in press</em>.</li><br>
+
             <li><a href="http://pubs.acs.org/doi/pdf/10.1021/jacs.5b04917" target="_blank">Dioxygen Activation and Catalytic Reduction to Hydrogen Peroxide by a Thiolate-Bridged Dimanganese(II) Complex with a Pendant Thiol</a><br>
             M. Gennari, D. Brazzolotto, J. Pecaut, M. V. Cherrier, C. J. Pollock, S. DeBeer, M. Retegan, D. A. Pantazis, F. Neese, M. Rouzieres, R. Clérac, C. Duboc<br>
-            <em>J. Am. Chem. Soc</em> <strong>2015</strong>, <em>accepted</em></li><br>
+            <em>J. Am. Chem. Soc.</em> <strong>2015</strong>, <em>137</em>, 8644&ndash;8653.</li><br>
             
             <li><a href="http://dx.doi.org/10.1039/C4SC03720K" target="_blank">Metal oxidation states in biological water splitting</a><br>
             V. Krewald, M. Retegan, N. Cox, J. Messinger, W. Lubitz, S. DeBeer, F. Neese, D. A. Pantazis<br>
@@ -139,7 +147,7 @@
             <em>J. Chem. Inf. Model.</em> <strong>2009</strong>, <em>49</em>, 963&ndash;971.</li><br>
         </ol>
         </p>
-        <p><small>&copy; Marius Retegan 2015 &mdash; hosted on GitHub</small></p>
+        <p><small>&copy; Marius Retegan 2015 &mdash; page hosted at <a href="https://github.com/mretegan/mretegan.github.io">GitHub</a></small></p>
     </section>
 </div>
 
