Updated publication list

--- a/index.html
+++ b/index.html
@@ -65,13 +65,22 @@
         <hr></hr>
         <p>
         <ol reversed>
-            <li><a href="http://arxiv.org/abs/1309.2131v2" target="_blank">Towards atomistic resolution structure of phosphatidylcholine glycerol backbone and choline headgroup at different ambient conditions</a><br>
-            A. Botan, A. Catte, F. Favela, P. Fuchs, M. Javanainen, W. Kulig, A. Lamberg, M. S. Miettinen, L. Monticelli, J. Määttä, V. S. Oganesyan, O.  H. S. Ollila, M. Retegan, H. Santuz, J. Tynkkynen<br>
-            <em>J. Phys. Chem.</em> <strong>2015</strong>, <em>accepted</em>.</li><br>
+
+            <li><a href="http://dx.doi.org/10.1021/acs.inorgchem.5b02578" target="_blank">Spin state as a marker for the structural evolution of nature’s water-splitting catalyst</a><br>
+            V. Krewald, M. Retegan, F. Neese, W. Lubitz, D. A. Pantazis and N. Cox<br>
+            <em>Inorg. Chem.</em> <strong>2016</strong>, <em>ASAP</em>.</li><br>
+
+            <li><a href="http://dx.doi.org/10.1039/C5SC03124A" target="_blank">A five-coordinate Mn(IV) intermediate in biological water oxidation: spectroscopic signature and a pivot mechanism for water binding</a><br>
+            M. Retegan, V. Krewald, F. Mamedov, F. Neese, W. Lubitz, N. Cox and D. A. Pantazis<br>
+            <em>Chem. Sci.</em> <strong>2016</strong>, <em>7</em>, 72&ndash;84.</li><br>
 
             <li><a href="http://dx.doi.org/10.1007/128_2015_645" target="_blank">Principles of natural photosynthesis</a><br>
             V. Krewald, M. Retegan, D. A. Pantazis<br>
-            <em>Top. Curr. Chem.</em> <strong>2015</strong>, <em>in press</em>.</li><br>
+            <em>Top. Curr. Chem.</em> <strong>2016</strong>, <em>371</em>, 23&ndash;48.</li><br>
+
+            <li><a href="http://dx.doi.org/10.1021/acs.jpcb.5b04878" target="_blank">Towards atomistic resolution structure of phosphatidylcholine glycerol backbone and choline headgroup at different ambient conditions</a><br>
+            A. Botan, A. Catte, F. Favela, P. Fuchs, M. Javanainen, W. Kulig, A. Lamberg, M. S. Miettinen, L. Monticelli, J. Määttä, V. S. Oganesyan, O.  H. S. Ollila, M. Retegan, H. Santuz, J. Tynkkynen<br>
+            <em>J. Phys. Chem.</em> <strong>2015</strong>, <em>119</em>, 15075&ndash;15088.</li><br>
 
             <li><a href="http://pubs.acs.org/doi/pdf/10.1021/jacs.5b04917" target="_blank">Dioxygen Activation and Catalytic Reduction to Hydrogen Peroxide by a Thiolate-Bridged Dimanganese(II) Complex with a Pendant Thiol</a><br>
             M. Gennari, D. Brazzolotto, J. Pecaut, M. V. Cherrier, C. J. Pollock, S. DeBeer, M. Retegan, D. A. Pantazis, F. Neese, M. Rouzieres, R. Clérac, C. Duboc<br>
