Update personal information

--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
         <br>
         <h1>Marius Retegan</h1>
         <p>
-        Max Planck research fellow at the<br>
-        <a href="http://www.cec.mpg.de" target="_blank">MPI for Chemical Energy Conversion</a><br>
-        <!-- Stiftstr. 34&ndash;36  -->
-        <!-- 45470 Mülheim an der Ruhr, Germany -->
-        marius.retegan (at) cec.mpg.de<br>
-        +49 (0) 208 306 3588
+        Scientist at the <a href="http://www.esrf.eu" target="_blank">The European Syncrotron</a><br>
+        marius.retegan (at) esrf.eu<br>
+        +33 (0) 4 38 88 19 29
         </p>
     </header>
 
