--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <br>
         <h1>Marius Retegan</h1>
         <p>
-        Scientist at the <a href="http://www.esrf.eu" target="_blank">The European Syncrotron</a><br>
+        Scientist at the <br>
+        <a href="http://www.esrf.eu" target="_blank">The European Synchrotron</a><br>
         marius.retegan (at) esrf.eu<br>
         +33 (0) 4 38 88 19 29
         </p>
